manifest-ca.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mwc-example
  namespace: mwc-example
  labels:
    name: mwc-example
spec:
  ports:
  - name: webhook
    port: 443
  selector:
    name: mwc-example 
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mwc-example
  namespace: mwc-example
  labels:
    name: mwc-example
spec:
  replicas: 1
  template:
    metadata:
      name: mwc-example
      labels:
        name: mwc-example
    spec:
      containers:
        - name: webhook
          image: jasonrichardsmith/mwc-example:0.1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: mwc-example
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mwc-example
webhooks:
  - name: mwc-example.jasonrichardsmith.com
    clientConfig:
      service:
        name: mwc-example
        namespace: mwc-example
        path: "/mutating-pods"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM2akNDQWRLZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFtTVNRd0lnWURWUVFEREJ0dmNHVnUKYzJocFpuUXRjMmxuYm1WeVFERTFOVE0wTmpFd09Ua3dIaGNOTVRrd016STBNakExT0RFNVdoY05NalF3TXpJeQpNakExT0RJd1dqQW1NU1F3SWdZRFZRUUREQnR2Y0dWdWMyaHBablF0YzJsbmJtVnlRREUxTlRNME5qRXdPVGt3CmdnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUM2RUhhOG1CaVJVa3hvcmFPU1lGMVYKQVkyS0h1b3dFS0dhSDdxaU5keEg1Vyt0Y2FSRjVVbW1QY3RBOFdGSGE4Z1RMd2pMVllGUG1GUnZJUFM4K2EvUApXcEtBcTl4NHJ [...]
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Fail
    namespaceSelector:
      matchLabels:
        mwc-example: enabled
